# timesheet-util

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/timesheet_util/: .util.py.swp  __init__.py  skeleton.py  util.py
tests/: .test_util.py.swp  conftest.py  test_shift.py  test_skeleton.py  test_util.py
